compiler-core/src/erlang/tests/snapshots/rakun_core__erlang__tests__records__basic.snap
---
source: compiler-core/src/erlang/tests/records.rs
assertion_line: 7
expression: "record_definition(\"PetCat\",\n&[(\"name\", type_::tuple(vec![])), (\"is_cute\", type_::tuple(vec![]))])"
---
-record(pet_cat, {name :: {}, is_cute :: {}}).
