compiler-core/src/erlang/tests/snapshots/rakun_core__erlang__tests__records__imported_qualified_constructor_as_fn_name_escape.snap
---
source: compiler-core/src/erlang/tests/records.rs
assertion_line: 358
expression: "import other_module\n\npub fn main() {\n  other_module.Let\n}"
---
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([main/0]).

-file("/root/project/test/my/mod.rakun", 3).
-spec main() -> fun((integer()) -> other_module:'let'()).
main() ->
    fun(Field@0) -> {'let', Field@0} end.
