compiler-core/src/erlang/tests/snapshots/rakun_core__erlang__tests__records__long_definition_formatting.snap
---
source: compiler-core/src/erlang/tests/records.rs
assertion_line: 65
expression: "record_definition(\"PetCat\",\n&[(\"name\", type_::generic_var(1)), (\"is_cute\", type_::unbound_var(1)),\n(\"linked\", type_::link(type_::int())),\n(\"whatever\",\ntype_::list(type_::tuple(vec![type_::nil(),\ntype_::list(type_::tuple(vec![type_::nil(), type_::nil(), type_::nil()])),\ntype_::nil(),\ntype_::list(type_::tuple(vec![type_::nil(), type_::nil(), type_::nil()])),\ntype_::nil(),\ntype_::list(type_::tuple(vec![type_::nil(), type_::nil(),\ntype_::nil()])),]))),])"
---
-record(pet_cat, {
    name :: any(),
    is_cute :: any(),
    linked :: integer(),
    whatever :: list({nil,
        list({nil, nil, nil}),
        nil,
        list({nil, nil, nil}),
        nil,
        list({nil, nil, nil})})
}).
