compiler-core/src/erlang/tests/snapshots/rakun_core__erlang__tests__records__record_accessor_multiple_variants.snap
---
source: compiler-core/src/erlang/tests/records.rs
assertion_line: 101
expression: "\npub record Person {\n    Teacher(name: String, title: String)\n    Student(name: String, age: Int)\n}\npub fn get_name(person: Person) { person.name }"
---
----- SOURCE CODE

pub record Person {
    Teacher(name: String, title: String)
    Student(name: String, age: Int)
}
pub fn get_name(person: Person) { person.name }

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([get_name/1]).
-export_type([person/0]).

-type person() :: {teacher, binary(), binary()} | {student, binary(), integer()}.

-file("/root/project/test/my/mod.rakun", 6).
-spec get_name(person()) -> binary().
get_name(Person) ->
    erlang:element(2, Person).
