compiler-core/src/erlang/tests/snapshots/rakun_core__erlang__tests__records__record_accessor_multiple_variants_parameterised_types.snap
---
source: compiler-core/src/erlang/tests/records.rs
assertion_line: 130
expression: "\npub record Person {\n    Teacher(name: String, age: List<Int>, title: String)\n    Student(name: String, age: List<Int>)\n}\npub fn get_name(person: Person) { person.name }\npub fn get_age(person: Person) { person.age }"
---
----- SOURCE CODE

pub record Person {
    Teacher(name: String, age: List<Int>, title: String)
    Student(name: String, age: List<Int>)
}
pub fn get_name(person: Person) { person.name }
pub fn get_age(person: Person) { person.age }

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([get_name/1, get_age/1]).
-export_type([person/0]).

-type person() :: {teacher, binary(), list(integer()), binary()} |
    {student, binary(), list(integer())}.

-file("/root/project/test/my/mod.rakun", 6).
-spec get_name(person()) -> binary().
get_name(Person) ->
    erlang:element(2, Person).

-file("/root/project/test/my/mod.rakun", 7).
-spec get_age(person()) -> list(integer()).
get_age(Person) ->
    erlang:element(3, Person).
