compiler-core/src/erlang/tests/snapshots/rakun_core__erlang__tests__records__record_accessor_multiple_variants_positions_other_than_first.snap
---
source: compiler-core/src/erlang/tests/records.rs
assertion_line: 114
expression: "\npub record Person {\n    Teacher(name: String, age: Int, title: String)\n    Student(name: String, age: Int)\n}\npub fn get_name(person: Person) { person.name }\npub fn get_age(person: Person) { person.age }"
---
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([get_name/1, get_age/1]).
-export_type([person/0]).

-type person() :: {teacher, binary(), integer(), binary()} |
    {student, binary(), integer()}.

-file("/root/project/test/my/mod.rakun", 6).
-spec get_name(person()) -> binary().
get_name(Person) ->
    erlang:element(2, Person).

-file("/root/project/test/my/mod.rakun", 7).
-spec get_age(person()) -> integer().
get_age(Person) ->
    erlang:element(3, Person).
