compiler-core/src/erlang/tests/snapshots/rakun_core__erlang__tests__records__record_constants.snap
---
source: compiler-core/src/erlang/tests/records.rs
assertion_line: 315
expression: "pub record Test { A }\nconst some_test = A\npub fn a() { A }"
---
----- SOURCE CODE
pub record Test { A }
const some_test = A
pub fn a() { A }

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([a/0]).
-export_type([test/0]).

-type test() :: a.

-file("/root/project/test/my/mod.rakun", 3).
-spec a() -> test().
a() ->
    a.
