compiler-core/src/erlang/tests/snapshots/rakun_core__erlang__tests__records__record_spread.snap
---
source: compiler-core/src/erlang/tests/records.rs
assertion_line: 158
expression: "\nrecord Triple {\n    Triple(a: Int, b: Int, c: Int)\n}\n\nfn main() {\n  let triple = Triple(1,2,3)\n  let Triple(the_a, ..) = triple\n  the_a\n}\n"
---
----- SOURCE CODE

record Triple {
    Triple(a: Int, b: Int, c: Int)
}

fn main() {
  let triple = Triple(1,2,3)
  let Triple(the_a, ..) = triple
  the_a
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export_type([triple/0]).

-type triple() :: {triple, integer(), integer(), integer()}.

-file("/root/project/test/my/mod.rakun", 6).
-spec main() -> integer().
main() ->
    Triple = {triple, 1, 2, 3},
    {triple, The_a, _, _} = Triple,
    The_a.
